# Discord-Rich-Presence-Plugin

./: .gitignore  CMakeLists.txt  README.md  images.qrc  user-config.cmake
includes/: Discord.hpp  DiscordPlugin.hpp  DiscordPluginSideBar.hpp
sources/: Discord.cpp  DiscordPlugin.cpp  DiscordPluginSideBar.cpp
